@@ -1,6 +1,7 @@
 package br.kauan.notificationgateway.grpc;
 
-import br.kauan.notificationgateway.grpc.proto.NotificationBatch;
+import br.kauan.notificationgateway.delivery.NotificationDelivery;
+import br.kauan.notificationgateway.grpc.proto.Notification;
 import io.grpc.stub.StreamObserver;
 import org.junit.jupiter.api.Test;
 
@@ -9,94 +10,102 @@ import static org.assertj.core.api.Assertions.assertThat;
 class SubscriberRegistryTest {
 
     @Test
-    void dispatchingFewerThanMaxBatchSizeWaitsForTimedFlush() throws Exception {
-        var registry = new SubscriberRegistry(64, 1_000);
+    void dispatchSendsOneNotificationImmediately() {
+        var registry = new SubscriberRegistry();
         var observer = new CapturingObserver();
         byte[] payload = "payload".getBytes();
 
         registry.register("20000001", observer);
-        registry.dispatch("20000001", payload);
+        boolean sent = registry.dispatch(delivery("delivery-1", "20000001", payload));
 
-        assertThat(observer.batches).isEmpty();
-
-        Thread.sleep(1_200);
-
-        assertThat(observer.batches).hasSize(1);
-        assertThat(observer.batches.getFirst().getPayloadsCount()).isEqualTo(1);
-        registry.shutdown();
+        assertThat(sent).isTrue();
+        assertThat(observer.notifications).hasSize(1);
+        assertThat(observer.notifications.getFirst().getDeliveryId()).isEqualTo("delivery-1");
+        assertThat(observer.notifications.getFirst().getPayload().toByteArray()).isEqualTo(payload);
     }
 
     @Test
-    void dispatchingMaxBatchSizeFlushesOneBatchImmediately() {
-        var registry = new SubscriberRegistry(64, 5_000);
+    void dispatchSendsOneNotificationPerPayload() {
+        var registry = new SubscriberRegistry();
         var observer = new CapturingObserver();
 
         registry.register("20000001", observer);
-        for (int i = 0; i < 64; i++) {
-            registry.dispatch("20000001", new byte[]{(byte) i});
+        for (int i = 0; i < 3; i++) {
+            registry.dispatch(delivery("delivery-" + i, "20000001", new byte[]{(byte) i}));
         }
 
-        assertThat(observer.batches).hasSize(1);
-        assertThat(observer.batches.getFirst().getPayloadsCount()).isEqualTo(64);
-        registry.shutdown();
+        assertThat(observer.notifications).hasSize(3);
+        assertThat(observer.notifications.get(0).getPayload().toByteArray()).isEqualTo(new byte[]{0});
+        assertThat(observer.notifications.get(1).getPayload().toByteArray()).isEqualTo(new byte[]{1});
+        assertThat(observer.notifications.get(2).getPayload().toByteArray()).isEqualTo(new byte[]{2});
     }
 
     @Test
-    void emittedBatchContainsOriginalPayloadBytesWithoutCopying() {
-        var registry = new SubscriberRegistry(2, 5_000);
+    void emittedNotificationContainsOriginalPayloadBytesWithoutCopying() {
+        var registry = new SubscriberRegistry();
         var observer = new CapturingObserver();
-        byte[] first = "first".getBytes();
-        byte[] second = "second".getBytes();
+        byte[] payload = "payload".getBytes();
 
         registry.register("20000001", observer);
-        registry.dispatch("20000001", first);
-        registry.dispatch("20000001", second);
+        registry.dispatch(delivery("delivery-1", "20000001", payload));
 
-        first[0] = 'F';
+        payload[0] = 'P';
 
-        assertThat(observer.batches).hasSize(1);
-        assertThat(observer.batches.getFirst().getPayloads(0).byteAt(0)).isEqualTo((byte) 'F');
-        assertThat(observer.batches.getFirst().getPayloads(1).toByteArray()).isEqualTo(second);
-        registry.shutdown();
+        assertThat(observer.notifications).hasSize(1);
+        assertThat(observer.notifications.getFirst().getPayload().byteAt(0)).isEqualTo((byte) 'P');
     }
 
     @Test
-    void multipleSubscribersForSameIspbReceiveSameBatch() {
-        var registry = new SubscriberRegistry(2, 5_000);
+    void multipleSubscribersForSameIspbReceiveOnlyOneDeliveryAttempt() {
+        var registry = new SubscriberRegistry();
         var first = new CapturingObserver();
         var second = new CapturingObserver();
 
         registry.register("20000001", first);
         registry.register("20000001", second);
-        registry.dispatch("20000001", "one".getBytes());
-        registry.dispatch("20000001", "two".getBytes());
+        registry.dispatch(delivery("delivery-1", "20000001", "one".getBytes()));
 
-        assertThat(first.batches).hasSize(1);
-        assertThat(second.batches).hasSize(1);
-        assertThat(first.batches.getFirst()).isSameAs(second.batches.getFirst());
-        registry.shutdown();
+        assertThat(first.notifications).hasSize(1);
+        assertThat(second.notifications).isEmpty();
     }
 
     @Test
-    void dispatchWithoutSubscribersDropsPayload() throws Exception {
-        var registry = new SubscriberRegistry(2, 25);
+    void dispatchWithoutSubscribersReturnsFalse() {
+        var registry = new SubscriberRegistry();
         var observer = new CapturingObserver();
 
-        registry.dispatch("20000001", "dropped".getBytes());
+        boolean sent = registry.dispatch(delivery("delivery-1", "20000001", "dropped".getBytes()));
         registry.register("20000001", observer);
-        Thread.sleep(100);
 
-        assertThat(observer.batches).isEmpty();
-        registry.shutdown();
+        assertThat(sent).isFalse();
+        assertThat(observer.notifications).isEmpty();
     }
 
-    private static final class CapturingObserver implements StreamObserver<NotificationBatch> {
+    @Test
+    void connectedIspbsIncludesOnlyCurrentlyRegisteredIspbs() {
+        var registry = new SubscriberRegistry();
+        var observer = new CapturingObserver();
 
-        private final java.util.List<NotificationBatch> batches = new java.util.concurrent.CopyOnWriteArrayList<>();
+        registry.register("20000001", observer);
+
+        assertThat(registry.connectedIspbs()).containsExactly("20000001");
+
+        registry.unregister("20000001", observer);
+
+        assertThat(registry.connectedIspbs()).isEmpty();
+    }
+
+    private static NotificationDelivery delivery(String communicationId, String ispb, byte[] payload) {
+        return new NotificationDelivery(communicationId, ispb, payload);
+    }
+
+    private static final class CapturingObserver implements StreamObserver<Notification> {
+
+        private final java.util.List<Notification> notifications = new java.util.concurrent.CopyOnWriteArrayList<>();
 
         @Override
-        public void onNext(NotificationBatch value) {
-            this.batches.add(value);
+        public void onNext(Notification value) {
+            this.notifications.add(value);
         }
 
         @Override
